0.17/_sources/auto_tutorials/plot_object_epochs.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_auto_tutorials_plot_object_epochs.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_tutorials_plot_object_epochs.py:


.. _tut_epochs_objects:

The :class:`Epochs <mne.Epochs>` data structure: epoched data
=============================================================

:class:`Epochs <mne.Epochs>` objects are a way of representing continuous
data as a collection of time-locked trials, stored in an array of shape
``(n_events, n_channels, n_times)``. They are useful for many statistical
methods in neuroscience, and make it easy to quickly overview what occurs
during a trial.


.. code-block:: python


    import mne
    import os.path as op
    import numpy as np
    from matplotlib import pyplot as plt







:class:`Epochs <mne.Epochs>` objects can be created in three ways:
 1. From a :class:`Raw <mne.io.Raw>` object, along with event times
 2. From an :class:`Epochs <mne.Epochs>` object that has been saved as a
    `.fif` file
 3. From scratch using :class:`EpochsArray <mne.EpochsArray>`. See
    :ref:`tut_creating_data_structures`


.. code-block:: python


    data_path = mne.datasets.sample.data_path()
    # Load a dataset that contains events
    raw = mne.io.read_raw_fif(
        op.join(data_path, 'MEG', 'sample', 'sample_audvis_raw.fif'))

    # If your raw object has a stim channel, you can construct an event array
    # easily
    events = mne.find_events(raw, stim_channel='STI 014')

    # Show the number of events (number of rows)
    print('Number of events:', len(events))

    # Show all unique event codes (3rd column)
    print('Unique event codes:', np.unique(events[:, 2]))

    # Specify event codes of interest with descriptive labels.
    # This dataset also has visual left (3) and right (4) events, but
    # to save time and memory we'll just look at the auditory conditions
    # for now.
    event_id = {'Auditory/Left': 1, 'Auditory/Right': 2}





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Opening raw data file /home/circleci/mne_data/MNE-sample-data/MEG/sample/sample_audvis_raw.fif...
        Read a total of 3 projection items:
            PCA-v1 (1 x 102)  idle
            PCA-v2 (1 x 102)  idle
            PCA-v3 (1 x 102)  idle
        Range : 25800 ... 192599 =     42.956 ...   320.670 secs
    Ready.
    Current compensation grade : 0
    320 events found
    Event IDs: [ 1  2  3  4  5 32]
    Number of events: 320
    Unique event codes: [ 1  2  3  4  5 32]


Now, we can create an :class:`mne.Epochs` object with the events we've
extracted. Note that epochs constructed in this manner will not have their
data available until explicitly read into memory, which you can do with
:func:`get_data <mne.Epochs.get_data>`. Alternatively, you can use
`preload=True`.

Expose the raw data as epochs, cut from -0.1 s to 1.0 s relative to the event
onsets


.. code-block:: python

    epochs = mne.Epochs(raw, events, event_id, tmin=-0.1, tmax=1,
                        baseline=(None, 0), preload=True)
    print(epochs)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    145 matching events found
    Applying baseline correction (mode: mean)
    Not setting metadata
    Created an SSP operator (subspace dimension = 3)
    3 projection items activated
    Loading data for 145 events and 662 original time points ...
    0 bad epochs dropped
    <Epochs  |   145 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~279.0 MB, data loaded,
     'Auditory/Left': 72
     'Auditory/Right': 73>


Epochs behave similarly to :class:`mne.io.Raw` objects. They have an
:class:`info <mne.Info>` attribute that has all of the same
information, as well as a number of attributes unique to the events contained
within the object.


.. code-block:: python


    print(epochs.events[:3])
    print(epochs.event_id)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    [[27977     0     2]
     [28771     0     1]
     [29652     0     2]]
    {'Auditory/Left': 1, 'Auditory/Right': 2}


You can select subsets of epochs by indexing the :class:`Epochs <mne.Epochs>`
object directly. Alternatively, if you have epoch names specified in
`event_id` then you may index with strings instead.


.. code-block:: python


    print(epochs[1:5])
    print(epochs['Auditory/Right'])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <Epochs  |   4 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~11.3 MB, data loaded,
     'Auditory/Left': 2
     'Auditory/Right': 2>
    <Epochs  |   73 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~142.3 MB, data loaded,
     'Auditory/Right': 73>


Note the '/'s in the event code labels. These separators allow tag-based
selection of epoch sets; every string separated by '/' can be entered, and
returns the subset of epochs matching any of the strings. E.g.,


.. code-block:: python


    print(epochs['Right'])
    print(epochs['Right', 'Left'])






.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <Epochs  |   73 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~142.3 MB, data loaded,
     'Auditory/Right': 73>
    <Epochs  |   145 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~279.0 MB, data loaded,
     'Auditory/Left': 72
     'Auditory/Right': 73>


Note that MNE will not complain if you ask for tags not present in the
object, as long as it can find some match: the below example is parsed as
(inclusive) 'Right' OR 'Left'. However, if no match is found, an error is
returned.


.. code-block:: python


    epochs_r = epochs['Right']
    epochs_still_only_r = epochs_r[['Right', 'Left']]
    print(epochs_still_only_r)

    try:
        epochs_still_only_r["Left"]
    except KeyError:
        print("Tag-based selection without any matches raises a KeyError!")





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <Epochs  |   73 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~142.3 MB, data loaded,
     'Auditory/Right': 73>
    Tag-based selection without any matches raises a KeyError!


It is also possible to iterate through :class:`Epochs <mne.Epochs>` objects
in this way. Note that behavior is different if you iterate on `Epochs`
directly rather than indexing:


.. code-block:: python


    # These will be epochs objects
    for i in range(3):
        print(epochs[i])

    # These will be arrays
    for ep in epochs[:2]:
        print(ep)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <Epochs  |   1 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~5.6 MB, data loaded,
     'Auditory/Right': 1>
    <Epochs  |   1 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~5.6 MB, data loaded,
     'Auditory/Left': 1>
    <Epochs  |   1 events (all good), -0.0998976 - 1.00064 sec, baseline [None, 0], ~5.6 MB, data loaded,
     'Auditory/Right': 1>
    [[-1.565102e-12 -6.007460e-13  3.636094e-13 ... -5.422523e-12
      -3.493812e-12  8.078453e-12]
     [ 4.711114e-12  2.782403e-12 -1.106637e-13 ... -2.039375e-12
      -1.075019e-12  1.818047e-12]
     [ 1.276942e-13  1.268109e-13  8.746598e-14 ...  3.271764e-14
       5.591077e-14  6.809752e-14]
     ...
     [-7.882185e-06 -9.779005e-06 -9.289503e-06 ... -6.536055e-06
      -7.147932e-06 -8.800001e-06]
     [-6.958130e-06 -8.069092e-06 -7.192017e-06 ... -6.256470e-06
      -6.607300e-06 -8.361450e-06]
     [ 1.267723e-05  1.267723e-05  1.333092e-05 ... -1.412392e-05
      -1.412392e-05 -1.150917e-05]]
    [[-1.386459e-11 -1.482894e-11 -1.482894e-11 ...  4.458168e-12
       4.458168e-12  8.315590e-12]
     [-9.011191e-12 -1.190426e-11 -1.286861e-11 ...  1.596720e-12
       3.525431e-12  3.525431e-12]
     [-6.120595e-13 -6.390434e-13 -7.736330e-13 ...  1.217540e-14
       2.692037e-14  7.259784e-15]
     ...
     [-4.517862e-06 -4.762613e-06 -2.743418e-06 ...  3.892544e-05
       3.806881e-05  3.611080e-05]
     [-1.068498e-05 -1.150358e-05 -1.056804e-05 ...  2.796480e-05
       2.492427e-05  2.217610e-05]
     [ 3.343446e-06  7.286997e-07 -3.193419e-06 ...  7.501321e-08
      -5.786733e-07  3.343446e-06]]


You can manually remove epochs from the Epochs object by using
:func:`epochs.drop(idx) <mne.Epochs.drop>`, or by using rejection or flat
thresholds with :func:`epochs.drop_bad(reject, flat) <mne.Epochs.drop_bad>`.
You can also inspect the reason why epochs were dropped by looking at the
list stored in ``epochs.drop_log`` or plot them with
:func:`epochs.plot_drop_log() <mne.Epochs.plot_drop_log>`. The indices
from the original set of events are stored in ``epochs.selection``.


.. code-block:: python


    epochs.drop([0], reason='User reason')
    epochs.drop_bad(reject=dict(grad=2500e-13, mag=4e-12, eog=200e-6), flat=None)
    print(epochs.drop_log)
    epochs.plot_drop_log()
    print('Selection from original events:\n%s' % epochs.selection)
    print('Removed events (from numpy setdiff1d):\n%s'
          % (np.setdiff1d(np.arange(len(events)), epochs.selection).tolist(),))
    print('Removed events (from list comprehension -- should match!):\n%s'
          % ([li for li, log in enumerate(epochs.drop_log) if len(log) > 0]))




.. image:: /auto_tutorials/images/sphx_glr_plot_object_epochs_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Dropped 1 epoch
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on MAG : ['MEG 1711']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on MAG : ['MEG 1711']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on MAG : ['MEG 1421']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on MAG : ['MEG 1421']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
        Rejecting  epoch based on EOG : ['EOG 061']
    23 bad epochs dropped
    [['User reason'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], ['MEG 1711'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['MEG 1711'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], ['MEG 1421', 'EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['MEG 1421', 'EOG 061'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], ['EOG 061'], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], [], ['IGNORED'], ['IGNORED']]
    Selection from original events:
    [  2   4   6   8  10  12  14  19  21  23  25  27  29  31  33  35  38  42
      44  46  48  50  52  54  56  58  63  65  67  69  71  73  75  77  88  90
      92  94  96  98 101 103 105 107 109 111 113 115 117 122 126 128 130 132
     134 136 138 140 142 145 151 153 155 157 159 161 168 170 174 176 178 182
     184 189 191 193 197 199 201 206 214 218 220 222 224 229 231 233 235 237
     239 241 243 245 248 250 252 254 256 258 262 264 269 271 273 281 285 290
     292 294 296 298 300 302 304 306 308 310 313 315 317]
    Removed events (from numpy setdiff1d):
    [0, 1, 3, 5, 7, 9, 11, 13, 15, 16, 17, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 37, 39, 40, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 60, 61, 62, 64, 66, 68, 70, 72, 74, 76, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 89, 91, 93, 95, 97, 99, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 119, 120, 121, 123, 124, 125, 127, 129, 131, 133, 135, 137, 139, 141, 143, 144, 146, 147, 148, 149, 150, 152, 154, 156, 158, 160, 162, 163, 164, 165, 166, 167, 169, 171, 172, 173, 175, 177, 179, 180, 181, 183, 185, 186, 187, 188, 190, 192, 194, 195, 196, 198, 200, 202, 203, 204, 205, 207, 208, 209, 210, 211, 212, 213, 215, 216, 217, 219, 221, 223, 225, 226, 227, 228, 230, 232, 234, 236, 238, 240, 242, 244, 246, 247, 249, 251, 253, 255, 257, 259, 260, 261, 263, 265, 266, 267, 268, 270, 272, 274, 275, 276, 277, 278, 279, 280, 282, 283, 284, 286, 287, 288, 289, 291, 293, 295, 297, 299, 301, 303, 305, 307, 309, 311, 312, 314, 316, 318, 319]
    Removed events (from list comprehension -- should match!):
    [0, 1, 3, 5, 7, 9, 11, 13, 15, 16, 17, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 37, 39, 40, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 60, 61, 62, 64, 66, 68, 70, 72, 74, 76, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 89, 91, 93, 95, 97, 99, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 119, 120, 121, 123, 124, 125, 127, 129, 131, 133, 135, 137, 139, 141, 143, 144, 146, 147, 148, 149, 150, 152, 154, 156, 158, 160, 162, 163, 164, 165, 166, 167, 169, 171, 172, 173, 175, 177, 179, 180, 181, 183, 185, 186, 187, 188, 190, 192, 194, 195, 196, 198, 200, 202, 203, 204, 205, 207, 208, 209, 210, 211, 212, 213, 215, 216, 217, 219, 221, 223, 225, 226, 227, 228, 230, 232, 234, 236, 238, 240, 242, 244, 246, 247, 249, 251, 253, 255, 257, 259, 260, 261, 263, 265, 266, 267, 268, 270, 272, 274, 275, 276, 277, 278, 279, 280, 282, 283, 284, 286, 287, 288, 289, 291, 293, 295, 297, 299, 301, 303, 305, 307, 309, 311, 312, 314, 316, 318, 319]


If you wish to save the epochs as a file, you can do it with
:func:`mne.Epochs.save`. To conform to MNE naming conventions, the
epochs file names should end with '-epo.fif'.


.. code-block:: python

    epochs_fname = op.join(data_path, 'MEG', 'sample', 'sample-epo.fif')
    epochs.save(epochs_fname)







Later on you can read the epochs with :func:`mne.read_epochs`. For reading
EEGLAB epochs files see :func:`mne.read_epochs_eeglab`. We can also use
``preload=False`` to save memory, loading the epochs from disk on demand.


.. code-block:: python

    epochs = mne.read_epochs(epochs_fname, preload=False)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Reading /home/circleci/mne_data/MNE-sample-data/MEG/sample/sample-epo.fif ...
        Read a total of 3 projection items:
            PCA-v1 (1 x 102) active
            PCA-v2 (1 x 102) active
            PCA-v3 (1 x 102) active
        Found the data of interest:
            t =     -99.90 ...    1000.64 ms
            0 CTF compensation matrices available
    121 matching events found
    Applying baseline correction (mode: mean)
    Created an SSP operator (subspace dimension = 3)
    121 matching events found
    Applying baseline correction (mode: mean)
    Not setting metadata
    Created an SSP operator (subspace dimension = 3)
    3 projection items activated


If you wish to look at the average across trial types, then you may do so,
creating an :class:`Evoked <mne.Evoked>` object in the process. Instances
of `Evoked` are usually created by calling :func:`mne.Epochs.average`. For
creating `Evoked` from other data structures see :class:`mne.EvokedArray` and
:ref:`tut_creating_data_structures`.


.. code-block:: python


    ev_left = epochs['Auditory/Left'].average()
    ev_right = epochs['Auditory/Right'].average()

    f, axs = plt.subplots(3, 2, figsize=(10, 5))
    _ = f.suptitle('Left / Right auditory', fontsize=20)
    _ = ev_left.plot(axes=axs[:, 0], show=False, time_unit='s')
    _ = ev_right.plot(axes=axs[:, 1], show=False, time_unit='s')
    plt.tight_layout()




.. image:: /auto_tutorials/images/sphx_glr_plot_object_epochs_002.png
    :class: sphx-glr-single-img




To export and manipulate Epochs using Pandas see
:ref:`sphx_glr_auto_tutorials_plot_epochs_to_data_frame.py`,
or to work directly with metadata in MNE-Python see
:ref:`sphx_glr_auto_tutorials_plot_metadata_epochs.py`.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  12.499 seconds)

**Estimated memory usage:**  573 MB


.. _sphx_glr_download_auto_tutorials_plot_object_epochs.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_object_epochs.py <plot_object_epochs.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_object_epochs.ipynb <plot_object_epochs.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
